# not_redis

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLANNING.md  README.md  analyze_architecture.md  analyze_dead_code.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  benchmark_runner.sh  get_performance_metric.sh  run_integration_tests.sh  setup.sh  what_has_changed_and_why_at_this_fork.md
.beads/: .beads-credential-key  metadata.json
.cargo/: deny.toml
.github/workflows/: benchmark.yml  ci.yml  enforce-pr.yml  security.yml
benches/: autoresearch_metric.rs  bench_concurrency_contention.rs  bench_concurrency_hash.rs  bench_concurrency_list.rs  bench_concurrency_mixed.rs  bench_concurrency_string.rs  bench_hash.rs  bench_list.rs  bench_set.rs  bench_string.rs  bench_throughput.rs  benchmarks.rs  redis_baseline.rs
docs/: explanation.md  how-to.md  reference.md  tutorial.md
docs/redis-rs/: all.html  enum.Arg.html  enum.ConnectionAddr.html  enum.ControlFlow.html  enum.Direction.html  enum.ErrorKind.html  enum.ExistenceCheck.html  enum.ExpireOption.html  enum.Expiry.html  enum.FieldExistenceCheck.html  enum.IntegerReplyOrNoOp.html  enum.NumericBehavior.html  enum.ProtocolVersion.html  enum.PushKind.html  enum.RetryMethod.html  enum.Role.html  enum.ServerErrorKind.html  enum.SetExpiry.html  enum.TlsMode.html  enum.UpdateCheck.html  enum.UserAssignedId.html  enum.Value.html  enum.ValueComparison.html  enum.ValueType.html  enum.VerbatimFormat.html  fn.calculate_value_digest.html  fn.cmd.html  fn.from_redis_value.html  fn.from_redis_value_ref.html  fn.is_valid_16_bytes_hex_digest.html  fn.make_extension_error.html  fn.pack_command.html  fn.parse_redis_url.html  fn.parse_redis_value.html  fn.parse_redis_value_async.html  fn.pipe.html  fn.transaction.html  index.html  sidebar-items.js  struct.AsyncConnectionConfig.html  (+50 more)
docs/redis-rs/acl/: enum.Rule.html  index.html  struct.AclInfo.html
docs/redis-rs/aio/: fn.prefer_smol.html  fn.prefer_tokio.html  index.html  sidebar-items.js  struct.ConnectionManager.html  struct.ConnectionManagerConfig.html  struct.Monitor.html  struct.MultiplexedConnection.html  struct.PubSub.html  struct.PubSubSink.html  struct.PubSubStream.html  struct.SendError.html  trait.AsyncPushSender.html  trait.AsyncStream.html  trait.ConnectionLike.html
docs/redis-rs/auth/: index.html  sidebar-items.js  struct.BasicAuth.html  trait.StreamingCredentialsProvider.html
docs/redis-rs/auth_management/: index.html  sidebar-items.js  struct.RetryConfig.html  (+1 more)
git_hooks/: commit-msg.sh  pre-commit.sh
planning/: 00-REDIS-RS-API.md  01-THE-PLAN.md  02-TESTING-PLAN.md
src/: client.rs  error.rs  lib.rs  main.rs
src/storage/: config.rs  engine.rs  expire.rs  memory.rs  mod.rs  types.rs
src/types/: from_redis_value.rs  mod.rs  to_redis_args.rs  value.rs
tests/: integration_tests.rs
(+131 files in other folders)
