[package]
name = "not_redis"
version = "0.3.0"
edition = "2021"
authors = ["not_redis contributors"]
description = "A Redis-compatible in-memory data structure library for Rust"
license = "MIT"
repository = "https://github.com/cmgriffing/not_redis"
keywords = ["redis", "cache", "in-memory", "database", "storage"]
categories = ["caching", "database-implementations", "data-structures"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dashmap = "6.0"
thiserror = "2.0"
rustc-hash = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }
criterion = { version = "0.5", features = ["async"] }
redis = "0.27"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "redis_baseline"
harness = false
